@@ -102,12 +102,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <skipTests>${skipUiTests}</skipTests>
-                    <argLine>
-                 @{argLine}   --add-opens infectiontracer.ui/infectiontracer.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                    </argLine>
-                </configuration>
+                 <configuration>
+                   <skip.surefire.tests>${skipTests}</skip.surefire.tests>
+                    </configuration>
             </plugin>
 
 
